creation of heatmap file

--- a/datavizlines.ipynb
+++ b/datavizlines.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "cf108292-03b8-4fdb-8f8d-e3f0a4c5d3d0",
+   "cell_type": "markdown",
+   "id": "6a752d2d-e096-486e-a292-03f2ef6e835f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "##Installation of the libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dd904400-eadf-4012-86ce-9f66d2410971",
    "metadata": {},
    "outputs": [
@@ -48,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "830178aa-9e01-46df-bdb4-cc4bcf171fbd",
    "metadata": {},
    "outputs": [
@@ -79,18 +77,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "435e6a88-fbd3-4422-bb13-d5a1d2b29962",
+   "cell_type": "markdown",
+   "id": "8252a6fe-0d8f-4519-b7ba-8b7f149ebff0",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Import of libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f1c4edf7-9e94-469d-aceb-29f9ea1fa855",
    "metadata": {},
    "outputs": [],
@@ -102,18 +98,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "5b02dc03-6440-4eb6-8902-a1735b819ab1",
+   "cell_type": "markdown",
+   "id": "6c540239-7af4-4c1d-9270-38e075f5e385",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Data recovery via a csv file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9d4559fa-736b-4200-bad1-20f9406d5891",
    "metadata": {},
    "outputs": [],
@@ -123,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "4b8fc3fe-6044-4053-b737-d754de59b62a",
    "metadata": {},
    "outputs": [],
@@ -133,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "2493d8c1-d665-4c9f-932d-b73059ed900c",
    "metadata": {},
    "outputs": [
@@ -163,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "b4c09d7c-cf7e-480a-9144-ac5f19ac69cd",
    "metadata": {},
    "outputs": [
@@ -230,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "cd32747e-9ea4-43f7-86d7-320b86b64821",
    "metadata": {},
    "outputs": [],
@@ -240,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "9055f0a8-4200-4f9f-9ba0-519517ae1de2",
    "metadata": {},
    "outputs": [
@@ -263,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "1c9e0c22-447f-43c0-b216-1ed37ed934d7",
    "metadata": {},
    "outputs": [
@@ -361,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "0a2ab564-3a08-46fd-9954-5dde74e258be",
    "metadata": {},
    "outputs": [],
@@ -371,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "5a0d28a9-8193-40e5-bd12-7ed70512fa08",
    "metadata": {},
    "outputs": [
@@ -438,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "57a70b50-ab3a-497e-bb25-16997d8266d1",
    "metadata": {},
    "outputs": [],
@@ -449,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "08202c23-37ad-4831-baeb-19d1f84a4f1c",
    "metadata": {},
    "outputs": [
@@ -485,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "a52525d2-cd62-4f4c-8372-98ced2998390",
    "metadata": {},
    "outputs": [
@@ -552,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "630cfc55-065c-4e00-9266-c00548fc5ad2",
    "metadata": {},
    "outputs": [],
@@ -562,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "71fc2002-c2ab-497b-8ccb-792f39199051",
    "metadata": {},
    "outputs": [
@@ -585,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "89d6e418-e027-46e2-a688-b91bd726c1d6",
    "metadata": {},
    "outputs": [],
@@ -595,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "e8755e4d-579d-4a64-b68f-bf8e02b31d51",
    "metadata": {},
    "outputs": [
@@ -626,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "1835e0f2-51e3-44ce-ac23-8b161cf2abc1",
    "metadata": {},
    "outputs": [
@@ -645,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "c03fcb64-4f1c-468a-89ed-101046830243",
    "metadata": {},
    "outputs": [],
@@ -655,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "28d9d559-2002-4a66-a0e9-25a5f42055c8",
    "metadata": {},
    "outputs": [],
@@ -666,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "90366017-0755-48c7-b934-8858df93406b",
    "metadata": {},
    "outputs": [
@@ -723,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "5108746a-c185-4950-ab48-b2e6bb6df4da",
    "metadata": {},
    "outputs": [
@@ -755,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "d432b1f9-c88d-4310-ab4c-cea43e77a7c4",
    "metadata": {},
    "outputs": [
@@ -786,18 +780,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "2bd9fb29-c835-49a2-9ed5-6484b10ebade",
+   "cell_type": "markdown",
+   "id": "29a3f5d3-2126-4a65-bdca-d0566dc4c60d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Data visalization of the number of validation on"
+    "## Data visalization of the number of validation on line 13 and on the date  22nd of January 2024"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "f434fb1f-034b-46bf-a903-c0e7adff488a",
    "metadata": {},
    "outputs": [
@@ -850,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "83e1bbcb-debe-43c5-88c5-2cdc3f33053b",
    "metadata": {},
    "outputs": [
@@ -885,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "c2ec2039-bb5e-424d-bd4a-cab44c4c455a",
    "metadata": {},
    "outputs": [
@@ -994,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "39a811dd-c807-4277-b2a7-8512d5d79bc1",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "3dda4aaf-2471-474a-b473-68ea99f85d90",
    "metadata": {},
    "outputs": [],
@@ -1039,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "ef4ec701-b58c-42af-bd21-79c59ef09c08",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "626936d8-1a65-4364-982b-8e17ace840c3",
    "metadata": {},
    "outputs": [
@@ -1129,18 +1121,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "1016a9af-21a9-4cb8-8d14-feda35774129",
+   "cell_type": "markdown",
+   "id": "209db35f-08bf-48c2-ae01-a61783ff6d5f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Creation on the data data viz but you can choose the line and the date "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "id": "6bcf5d28-4f0b-473f-8283-8d79012215ff",
    "metadata": {},
    "outputs": [
